import fr.kenlek.jpgen.api.Platform

plugins {
    `java-library`
    id("io.deepmedia.tools.deployer") version "0.18.0"
}

group = "fr.kenlek"
version = "1.1.0"

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25

    withSourcesJar()
    withJavadocJar()
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation("fr.kenlek.jpgen:jpgen-api:0.2.0")
}

val zigOut = layout.buildDirectory.dir("zig-out")
val jniIncludeDirectory = layout.buildDirectory.dir("jni-include")

tasks.register("downloadJNIHeaders") {
    group = project.name

    val headers = listOf(
        Triple("https://raw.githubusercontent.com/openjdk/jdk/refs/heads/master/src/java.base/share/native/include/jni.h", ".", "jni.h"),
        Triple("https://raw.githubusercontent.com/openjdk/jdk/refs/heads/master/src/java.desktop/share/native/include/jawt.h", ".", "jawt.h"),
        Triple("https://raw.githubusercontent.com/openjdk/jdk/refs/heads/master/src/java.base/unix/native/include/jni_md.h", "unix", "jni_md.h"),
        Triple("https://raw.githubusercontent.com/openjdk/jdk/refs/heads/master/src/java.base/windows/native/include/jni_md.h", "windows", "jni_md.h")
    )

    inputs.property("jniHeadersURIs", headers.map { it.first })
    outputs.dir(jniIncludeDirectory)

    doLast {
        for ((uri, relativeLocation, name) in headers) {
            logger.lifecycle("Downloading $relativeLocation/$name from URI: $uri")
            uri(uri).toURL().openStream().use { input ->
                val outputFile = jniIncludeDirectory.get().asFile.resolve("$relativeLocation/$name")
                outputFile.parentFile.mkdirs()
                outputFile.outputStream().use { output -> input.copyTo(output) }
            }
        }
    }
}

tasks.register<Exec>("compileNatives") {
    group = project.name
    dependsOn("downloadJNIHeaders")

    outputs.dir(zigOut)

    executable = providers.gradleProperty("${project.name}.zig").getOrElse("zig")
    args(
        "build", "--prefix", zigOut.get(), "-Doptimize=ReleaseSmall",
        "-DjniInclude=${jniIncludeDirectory.get()}"
    )
}

tasks.jar {
    dependsOn("compileNatives")

    from(zigOut.map { fileTree(it).files }) {
        include("*.so", "*.dll", "*.dylib")
        into("fr/kenlek/${project.name}/natives")
    }
}

tasks.compileJava.configure {
    options.javaModuleVersion = version.toString()
    options.compilerArgs.addAll(listOf("-Xlint:all,-restricted", "-Werror"))
}

tasks.withType<JavaExec>().configureEach {
    dependsOn("compileNatives")

    jvmArgs("--enable-native-access=ALL-UNNAMED")
    systemProperty("${project.name}.library.path", zigOut.get().dir(
        if (Platform.OS.WINDOWS.isCurrent) "bin" else "lib"
    ).file(System.mapLibraryName("${project.name}-${Platform.CURRENT.code()}")))
}

deployer {
    projectInfo {
        name = "jni4panama"
        groupId = group.toString()
        artifactId = project.name
        url = "http://github.com/Twiguinou/jni4panama"

        description = project.description
        license(apache2)
        developer("kenlek", "akushiru@kenlek.fr")
        scm.fromGithub("Twiguinou", "jni4panama")
    }

    release.version = version.toString()
    content.component {
        fromJava()
    }

    localSpec {
        signing {
            key = absent()
            password = absent()
        }
    }

    centralPortalSpec {
        auth {
            user = secret("CENTRAL_PORTAL_USER")
            password = secret("CENTRAL_PORTAL_PASSWORD")
        }

        signing {
            key = secret("SIGNING_KEY")
            password = secret("SIGNING_PASSWORD")
        }

        allowMavenCentralSync = false
    }
}
